--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
